--- a/Sesion-05/Ejemplo-01/funciones_vectorizadas.ipynb
+++ b/Sesion-05/Ejemplo-01/funciones_vectorizadas.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,120 +48,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0    11\n",
-       "1    12\n",
-       "2    13\n",
-       "3    14\n",
-       "4    15\n",
-       "5    16\n",
-       "6    17\n",
-       "7    18\n",
-       "8    19\n",
-       "9    20\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "serie_1 + 10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0     10\n",
-       "1     20\n",
-       "2     30\n",
-       "3     40\n",
-       "4     50\n",
-       "5     60\n",
-       "6     70\n",
-       "7     80\n",
-       "8     90\n",
-       "9    100\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "serie_1 * 10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0    1100\n",
-       "1    1200\n",
-       "2    1300\n",
-       "3    1400\n",
-       "4    1500\n",
-       "5    1600\n",
-       "6    1700\n",
-       "7    1800\n",
-       "8    1900\n",
-       "9    2000\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "(serie_1 + 10) * 100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0    0.6\n",
-       "1    1.2\n",
-       "2    1.8\n",
-       "3    2.4\n",
-       "4    3.0\n",
-       "5    3.6\n",
-       "6    4.2\n",
-       "7    4.8\n",
-       "8    5.4\n",
-       "9    6.0\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "serie_1 * 60 / 100"
    ]
@@ -170,12 +86,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Podemos también aplicar funciones de manera vectorizada a una Serie de pandas. Esto quiere decir que, sin necesidad de utilizar `map` la función se aplica automáticamente a cada elemento. Vamos a utilizar una librería llamada `numpy` para probar algunas de estas funciones vectorizadas."
+    "Podemos también aplicar funciones de manera vectorizada a una Serie de pandas. Esto quiere decir que, sin necesidad de utilizar `map` la función se aplica automáticamente a cada elemento. Vamos a utilizar una biblioteca llamada `numpy` para probar algunas de estas funciones vectorizadas."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,60 +100,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0      1\n",
-       "1      4\n",
-       "2      9\n",
-       "3     16\n",
-       "4     25\n",
-       "5     36\n",
-       "6     49\n",
-       "7     64\n",
-       "8     81\n",
-       "9    100\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "np.power(serie_1, 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0    1.000000\n",
-       "1    1.414214\n",
-       "2    1.732051\n",
-       "3    2.000000\n",
-       "4    2.236068\n",
-       "5    2.449490\n",
-       "6    2.645751\n",
-       "7    2.828427\n",
-       "8    3.000000\n",
-       "9    3.162278\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "np.sqrt(serie_1)"
    ]
@@ -259,9 +133,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (data_science)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "data_science"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -273,7 +147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
