--- a/Sesion-05/Ejemplo-04/nan.ipynb
+++ b/Sesion-05/Ejemplo-04/nan.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,98 +49,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>precio</th>\n",
-       "      <th>cantidad_en_stock</th>\n",
-       "      <th>productos_vendidos</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Pokemaster</th>\n",
-       "      <td>34.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Cegatron</th>\n",
-       "      <td>54.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>45.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Pikame Mucho</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>23.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Lazarillo de Tormes</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Stevie Wonder</th>\n",
-       "      <td>56.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>24.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Needle</th>\n",
-       "      <td>12.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>6.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>El AyMeDuele</th>\n",
-       "      <td>34.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                     precio  cantidad_en_stock  productos_vendidos\n",
-       "Pokemaster             34.0                3.0                 3.0\n",
-       "Cegatron               54.0                6.0                45.0\n",
-       "Pikame Mucho            NaN               14.0                23.0\n",
-       "Lazarillo de Tormes     NaN                NaN                 NaN\n",
-       "Stevie Wonder          56.0                5.0                24.0\n",
-       "Needle                 12.0                2.0                 6.0\n",
-       "El AyMeDuele           34.0               10.0                 NaN"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df"
    ]
@@ -154,98 +65,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>precio</th>\n",
-       "      <th>cantidad_en_stock</th>\n",
-       "      <th>productos_vendidos</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Pokemaster</th>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Cegatron</th>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Pikame Mucho</th>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Lazarillo de Tormes</th>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Stevie Wonder</th>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Needle</th>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>El AyMeDuele</th>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                     precio  cantidad_en_stock  productos_vendidos\n",
-       "Pokemaster            False              False               False\n",
-       "Cegatron              False              False               False\n",
-       "Pikame Mucho           True              False               False\n",
-       "Lazarillo de Tormes    True               True                True\n",
-       "Stevie Wonder         False              False               False\n",
-       "Needle                False              False               False\n",
-       "El AyMeDuele          False              False                True"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.isna()"
    ]
@@ -261,23 +83,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "precio                2\n",
-       "cantidad_en_stock     1\n",
-       "productos_vendidos    2\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.isna().sum(axis=0)"
    ]
@@ -291,27 +99,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Pokemaster             0\n",
-       "Cegatron               0\n",
-       "Pikame Mucho           1\n",
-       "Lazarillo de Tormes    3\n",
-       "Stevie Wonder          0\n",
-       "Needle                 0\n",
-       "El AyMeDuele           1\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.isna().sum(axis=1)"
    ]
@@ -333,9 +123,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (data_science)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "data_science"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -347,7 +137,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
