--- a/Sesion-05/Reto-01/funciones_vectorizadas.ipynb
+++ b/Sesion-05/Reto-01/funciones_vectorizadas.ipynb
@@ -65,40 +65,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Pídele a tu experta la función de verificación `obtener_calificaciones` (encontrada en el archivo `helpers.py` de la carpeta donde se encuentra este Reto), pégala debajo y corre la celda para verificar tu resultado:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Pega aquí la función de verificación\n",
-    "\n",
-    "obtener_calificaciones(aciertos, porcentajes)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<details><summary>Solución</summary>\n",
-    "\n",
-    "```python\n",
-    "por_100 = np.multiply(aciertos, 100)\n",
-    "entre_68 = np.divide(por_100, 68)\n",
-    "\n",
-    "porcentajes = entre_68\n",
-    "```\n",
-    "    \n",
-    "</details>"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -108,9 +74,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (data_science)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "data_science"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -122,7 +88,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
