--- a/Sesion-05/Reto-02/agregaciones.ipynb
+++ b/Sesion-05/Reto-02/agregaciones.ipynb
@@ -75,42 +75,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Pídele a tu experta la función de verificación `comparar_std` (encontrada en el archivo `helpers.py` de la carpeta donde se encuentra este Reto), pégala debajo y corre la celda para verificar tu resultado:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Pega aquí la función de verificación\n",
-    "\n",
-    "comparar_std(edades, std)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<details><summary>Solución</summary>\n",
-    "\n",
-    "```python\n",
-    "promedio = edades.sum() / edades.count()\n",
-    "diferencia = edades - promedio\n",
-    "cuadrado = np.power(diferencia, 2)\n",
-    "suma = cuadrado.sum()\n",
-    "division = suma / (edades.count() - 1)\n",
-    "raiz = np.sqrt(division)\n",
-    "```\n",
-    "    \n",
-    "</details>"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -120,9 +84,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (data_science)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "data_science"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -134,7 +98,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
