--- a/Sesion-05/Reto-04/limpiando_nans.ipynb
+++ b/Sesion-05/Reto-04/limpiando_nans.ipynb
@@ -90,42 +90,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Pídele a tu experta la función de verificación `revisar_limpieza` (encontrada en el archivo `helpers.py` de la carpeta donde se encuentra este Reto), pégala debajo y corre la celda para verificar tu resultado:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Pega aquí la función de verificación\n",
-    "\n",
-    "revisar_limpieza(df, df_copy)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<details><summary>Solución</summary>\n",
-    "\n",
-    "```python\n",
-    "df_copy.isna().sum(axis=0)\n",
-    "df_copy.isna().sum(axis=1)\n",
-    "df_copy = df_copy.dropna(axis=0, how='all')\n",
-    "df_copy = df_copy.dropna(axis=1, how='all')\n",
-    "df_copy['cantidad_vendidos'] = df_copy['cantidad_vendidos'].fillna(0)\n",
-    "df_copy = df_copy.dropna(axis=0)\n",
-    "```\n",
-    "    \n",
-    "</details>"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -135,9 +99,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (data_science)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "data_science"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -149,7 +113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
