--- a/Sesion-06/Reto-01/request.ipynb
+++ b/Sesion-06/Reto-01/request.ipynb
@@ -102,50 +102,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "6. Pídele a tu experta la función de verificación `visualizar_diametros` (encontrada en el archivo `helpers.py` de la carpeta donde se encuentra este Reto), pégala debajo y corre la celda para verificar tu resultado:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Pega aquí la función de verificación\n",
-    "\n",
-    "visualizar_diametros(objetos)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<details><summary>Solución</summary>\n",
-    "\n",
-    "```python\n",
-    "import requests\n",
-    "import pandas as pd\n",
-    "    \n",
-    "api_key = 'tu_api_key_va_aqui'\n",
-    "    \n",
-    "endpoint = 'https://api.nasa.gov/neo/rest/v1/neo/browse/'\n",
-    "payload = {'api_key': api_key, 'page': 100, 'size': 5}\n",
-    "    \n",
-    "r = requests.get(endpoint, params=payload)\n",
-    "r.status_code\n",
-    "    \n",
-    "data = r.json()['near_earth_objects']\n",
-    "normalized = pd.json_normalize(data)\n",
-    "objetos = pd.DataFrame.from_dict(normalized)\n",
-    "```\n",
-    "    \n",
-    "</details>"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -155,9 +111,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (data_science)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "data_science"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -169,7 +125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
