--- a/Sesion-06/Reto-03/excepciones.ipynb
+++ b/Sesion-06/Reto-03/excepciones.ipynb
@@ -60,50 +60,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Pídele a tu experta la función de verificación `test_lista_de_strings_a_lista_de_floats` (encontrada en el archivo `helpers.py` de la carpeta donde se encuentra este Reto), pégala debajo y corre la celda para verificar tu resultado:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Pega aquí la función de verificación\n",
-    "\n",
-    "test_lista_de_strings_a_lista_de_floats(lista_de_strings_a_lista_de_floats)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<details><summary>Solución</summary>\n",
-    "\n",
-    "```python\n",
-    "import numpy as np\n",
-    "\n",
-    "def lista_de_strings_a_lista_de_floats(lista_de_strings):\n",
-    "    \n",
-    "    lista_de_floats = []\n",
-    "    \n",
-    "    for string in lista_de_strings:\n",
-    "        try:\n",
-    "            float_ = float(string)\n",
-    "            lista_de_floats.append(float_)\n",
-    "        except:\n",
-    "            lista_de_floats.append(np.nan)\n",
-    "        \n",
-    "    return lista_de_floats\n",
-    "```\n",
-    "    \n",
-    "</details>"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -113,9 +69,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (data_science)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "data_science"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -127,7 +83,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
