--- a/Sesion-06/Reto-05/automatizando_peticiones.ipynb
+++ b/Sesion-06/Reto-05/automatizando_peticiones.ipynb
@@ -48,9 +48,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (data_science)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "data_science"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -62,7 +62,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
